--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-coffee": "^1.0.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-connect": "^1.0.0",
-    "grunt-contrib-coffee": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-less": "^1.3.0",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-gh-pages": "^1.1.0",
+    "grunt-postcss": "^0.8.0",
     "matchdep": "^1.0.0"
   },
   "engines": {
