--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-connect": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-less": "^1.3.0",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-gh-pages": "^1.1.0",
-    "grunt-postcss": "^0.8.0",
     "matchdep": "^1.0.0"
   },
   "engines": {
